# gamelink

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml
resources/lan-games-db/: lan-games.csv  lan-games.csv.license.md
src/: cli.py  controller.py  filehandler.py  helper.py  interfacehandler.py  loghandler.py  packethandler.py  partylan.py  porthandler.py
